# LegacyProject

./: .gitignore  Dockerfile  Jenkinsfile  README.md
deployments/customer_a/: config.ini
deployments/customer_b/: config.ini
deployments/customer_c/: config.ini
engine/: CMakeLists.txt  conanfile.py
engine/src/: main.cpp
gateway/: CMakeLists.txt  conanfile.py
gateway/src/: main.cpp
libcore/: CMakeLists.txt  conanfile.py
libcore/include/: libcore.h
libcore/src/: libcore.cpp
libmarket/: CMakeLists.txt  conanfile.py
libmarket/include/: libmarket.h
libmarket/src/: libmarket.cpp
libutils/: CMakeLists.txt  conanfile.py
libutils/include/: libutils.h
libutils/src/: libutils.cpp
